--- a/app/css/main.css
+++ b/app/css/main.css
@@ -124,12 +124,16 @@ body {
 .log-section-mobile {
   display: none;
 }
+.header {
+  text-align: center;
+}
 header {
-  margin-top: 0px;
+  margin-top: 0;
 }
 header .nav-top {
-  padding: 10px 0 80px 0;
-  background-color: #fff;
+  height: 135px;
+  background-color: #eee7de;
+  z-index: 9999;
 }
 header .nav-top p,
 header .nav-top p > a {
@@ -139,33 +143,33 @@ header .nav-top i {
   font-size: 22px;
   padding-left: 10px;
 }
+header .nav-top .logo {
+  margin: 15px 0;
+  text-align: center;
+  position: relative;
+  z-index: 9999;
+}
 header .navbar-default {
   position: relative;
   left: 0;
   right: 0;
-  background: #69181b;
-  background: -moz-linear-gradient(left, #69181b 0%, #3a030a 100%);
-  background: -webkit-gradient(left top, right top, color-stop(0%, #69181b), color-stop(100%, #3a030a));
-  background: -webkit-linear-gradient(left, #69181b 0%, #3a030a 100%);
-  background: -o-linear-gradient(left, #69181b 0%, #3a030a 100%);
-  background: -ms-linear-gradient(left, #69181b 0%, #3a030a 100%);
-  background: linear-gradient(to right, #69181b 0%, #3a030a 100%);
-  height: 70px;
-  border: none;
+  background: #fff;
+  height: 80px;
+  border-top: 3px dashed #372611;
+  border-bottom: 3px dashed #372611;
   border-radius: 0;
   margin-bottom: 0;
-  z-index: 9999;
+  z-index: 0;
 }
 header .navbar-default .navbar-brand {
   padding: 5px 15px;
 }
 header .navbar-default .navbar-nav > li > a {
-  color: #f5f5f5;
-  padding: 25px 15px;
+  color: #38270f;
+  padding: 30px 15px;
   font-size: 18px;
   font-family: 'Poppins', sans-serif;
-  font-weight: 300;
-  text-shadow: 0 2px 5px #000;
+  font-weight: 500;
   -webkit-transition: all ease-in-out 0.35s;
   -o-transition: all ease-in-out 0.35s;
   transition: all ease-in-out 0.35s;
@@ -173,8 +177,7 @@ header .navbar-default .navbar-nav > li > a {
 header .navbar-default .navbar-nav > li > a:hover,
 header .navbar-default .navbar-nav > li > a:focus {
   background-color: transparent;
-  color: #f5f5f5;
-  border-bottom: 1px solid #f5f5f5;
+  color: #b54991;
 }
 header .navbar-default .nav-main {
   display: table;
@@ -278,7 +281,7 @@ header .logo {
 .slider-img {
   background-position: center center;
   background-size: cover;
-  height: 720px;
+  height: 520px;
   background-repeat: no-repeat;
 }
 .bg-inner {
@@ -287,13 +290,17 @@ header .logo {
   background: rgba(0,0,0,0.5);
   height: 100%;
 }
+.carousel-inner {
+  background-color: rgba(238,231,222,0.07);
+  border-bottom: 3px dashed #372611;
+}
 .carousel-caption {
   top: 25%;
   opacity: 0.9;
   width: 100%;
   left: 0;
-  padding: 5px 70px 0;
-  text-align: center;
+  padding: 30px;
+  text-align: left;
 }
 .carousel-caption h2 {
   border-bottom: 1px solid rgba(255,255,255,0.4);
@@ -315,22 +322,22 @@ header .logo {
 .carousel-caption .btn {
   margin-right: 15px;
   font-size: 18px;
-  box-shadow: 0 0 5px #000;
-  text-shadow: 0 0 0px #000;
+  margin-top: 30px;
 }
 .carousel-caption a {
-  color: #fff;
+  color: #38270f;
+  text-shadow: none;
 }
 .carousel-caption h1 {
-  text-shadow: 0 0 10px #000;
-  font-size: 46px;
+  font-size: 26px;
+  text-shadow: none;
 }
 .carousel-caption .text {
   margin-top: 40px;
 }
 .carousel-caption p {
-  font-size: 34px;
-  text-shadow: 0 0 10px #000;
+  font-size: 20px;
+  text-shadow: none;
 }
 #slider-area {
   background: url("../img/bg.jpg");
@@ -620,22 +627,24 @@ color
 .nav-tabs > li.active > a:hover,
 .nav-tabs > li.active > a:focus,
 .nav-tabs > li > a:hover {
-  color: #79afa0;
+  color: #cb6133;
   background-color: transparent;
-  font-size: 22px;
-  border-bottom: 4px solid #79afa0 !important;
+  font-size: 20px;
   border: 0 solid transparent;
+  padding: 10px 0;
 }
 .nav-tabs > li > a {
+  padding: 10px 0;
   border-radius: 0;
-  font-size: 22px;
-  color: #888;
+  font-size: 20px;
+  color: #38270f;
+  margin-left: 0;
 }
 .nav-tabs {
   border-bottom: 1px solid #ccc;
 }
 .box-widget {
-  padding: 5px 0px;
+  padding: 5px 0;
   border: 1px solid #f5f5f5;
 }
 .box-widget .box-widget-header {
@@ -738,9 +747,8 @@ color
 .box-default h3 {
   background-color: transparent;
   padding: 10px;
-  color: #555;
+  color: #fff;
   font-size: 22px;
-  border-bottom: 3px solid #5d5d5d;
   -webkit-transition: all ease 0.1s;
   -moz-transition: all ease 0.1s;
   -ms-transition: all ease 0.1s;
@@ -760,13 +768,17 @@ color
   background-position: center center;
 }
 .box-default .box-container {
+  background-color: #cb6133;
   text-align: left;
+  border-bottom-right-radius: 3px;
+  border-bottom-left-radius: 3px;
 }
 .box-default .box-container a {
   text-decoration: none;
+  color: #fff;
 }
 .box-default .box-container h1 {
-  color: #5d5d5d;
+  color: #fff;
   font-weight: 300;
   font-size: 22px;
   margin: 10px 0;
@@ -793,7 +805,6 @@ color
 .box-default:hover h3,
 .box-default:focus h3 {
   color: #66161a;
-  border-bottom: 3px solid #66161a;
 }
 .box-default:hover p,
 .box-default:focus p {
@@ -1038,28 +1049,27 @@ color
   border-radius: 0px;
 }
 .btn-orange {
-  background: #cb6c18;
+  background: #cb6133;
   display: inline-block;
   padding: 10px 15px;
-  color: #fff;
+  color: #fff !important;
   font-weight: 300;
-  border: 1px solid #cb6c18;
+  border: 1px solid #cb6133;
   -webkit-transition: all ease 0.1s;
   -moz-transition: all ease 0.1s;
   -ms-transition: all ease 0.1s;
   -o-transition: all ease 0.1s;
   transition: all ease 0.1s;
-  border-radius: 3px;
+  border-radius: 30px;
 }
 .btn-orange:hover,
 .btn-orange:focus {
-  border: 1px solid #a65516;
-  background: #a65516;
+  border: 1px solid #9b4a27;
+  background: #9b4a27;
   display: inline-block;
   padding: 10px 15px;
   color: #fff;
   font-weight: 300;
-  border-radius: 3px;
 }
 .btn-green {
   background: #4ecb8c;
@@ -1298,6 +1308,20 @@ color
 }
 .owl-nav {
   display: none;
+}
+#products {
+  padding: 60px 0;
+}
+#products h2 {
+  color: #38270f;
+}
+.tabs-left {
+  border-bottom: none;
+  border-top: 1px solid #ccc;
+}
+.tabs-left > li {
+  float: none;
+  text-align: left;
 }
 .tab-animation > .tab-content {
   position: relative;
