--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -38,7 +38,7 @@
                                 camina con Luissa shoes.
                             </p>
                         </a>
-                        <a href="#" class="btn btn-orange"> Ver más</a>
+                        <a ui-sref="products" class="btn btn-orange"> Ver más</a>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                             <a href="#">
                                 <div class="box-default">
                                     <div class="box-header">
-                                        <img src="img/example.jpg" alt=""/>
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
                                     </div>
                                     <div class="box-container">
                                         <h3>Modelo a234</h3>
@@ -76,53 +76,190 @@
                                 </div>
                             </a>
                         </div>
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="see-more pull-right">
+                            <a href="#" class="btn btn-orange"><i class="fa fa-plus"></i> Mostrar más</a>
+                        </div>
                     </div>
                 </div>
-                <div class="tab-pane" id="profile">Profile Tab.</div>
-                <div class="tab-pane" id="messages">Messages Tab.</div>
-                <div class="tab-pane" id="settings">Settings Tab.</div>
+                <div class="tab-pane" id="profile">
+                    <div class="container-fluid">
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="see-more pull-right">
+                            <a href="#" class="btn btn-orange"><i class="fa fa-plus"></i> Mostrar más</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="messages">
+                    <div class="container-fluid">
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="see-more pull-right">
+                            <a href="#" class="btn btn-orange"><i class="fa fa-plus"></i> Mostrar más</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="tab-pane" id="settings">
+                    <div class="container-fluid">
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-md-4">
+                            <a href="#">
+                                <div class="box-default">
+                                    <div class="box-header">
+                                        <div class="img-box" style="background-image: url('../img/example.jpg')"></div>
+                                    </div>
+                                    <div class="box-container">
+                                        <h3>Modelo a234</h3>
+                                    </div>
+                                </div>
+                            </a>
+                        </div>
+                        <div class="see-more pull-right">
+                            <a href="#" class="btn btn-orange"><i class="fa fa-plus"></i> Mostrar más</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </section>
 
 
-<section id="our-services" class="section_padding">
+<section id="shoes-top" class="section_padding">
     <div class="container">
-        <div class="text-center">
-            <h1 class="title-section">{{ 'Productos'|translate }}</h1>
+        <div class="text-left">
+            <h1 class="title-section">Los más destacados</h1>
         </div>
-        <div class="col-sm-6 text-center" ng-repeat="category in Home.homeProducts">
-            <a ui-sref="category({slug: category.slug})">
-                <img ng-src="{{ category.urlImages.original }}" alt="{{ category.name }}"/>
 
-                <h3>{{ category.name|translate }}</h3>
-            </a>
-        </div>
-    </div>
-</section>
-
-<section id="info">
-    <div class="container">
-        <h1>{{ 'noti-rec'|translate }}</h1>
-
-        <div class="col-sm-3" ng-repeat="new in Home.news">
-            <div class="box-default">
-                <a ui-sref="post_detail({slug: new.slug})">
-                    <div class="img-box"
-                         style="background-image: url('
-                                 {{ new.urlImages.medium ? new.urlImages.medium : initConfig.img_default }}')">
-                    </div>
-                    <div class="box-container">
-                        <h3>{{ new.title }}</h3>
-                    </div>
-                </a>
+        <div class="owl-carousel owl-theme">
+            <div class="box-simple" ng-repeat="product in Home.products" ng-repeat-owl-carousel
+                 carousel-init="Home.carouselInitializer" ng-if="product">
+                <div class="box-header item">
+                    <a ui-sref="product_detail({slug: product.slug})">
+                        <div class="img-box" style="background-image: url('{{ product.urlImages.original }}')"></div>
+                    </a>
+                </div>
+                <div class="box-container">
+                    <h1>{{ product.title }}</h1>
+                </div>
             </div>
         </div>
-        <div class="col-sm-12" ng-show="!Home.news.length">
-            <h2 class="text-center no-content" ng-show="!Home.news.length">{{ 'no-contenido'|translate }}</h2>
-        </div>
-
     </div>
 </section>
+
 
