--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -155,7 +155,7 @@ header
       transition all ease-in-out .35s
     .navbar-nav > li > a:hover, .navbar-nav > li > a:focus
       background-color transparent
-      color #b54991
+      color #d14094
     .nav-main
       display table
       margin 0 auto
@@ -216,20 +216,18 @@ header
     color #5d5d5d
     font-size 18px
     text-align justify
-#our-services
-  background-color #c00
-  background-image url('../img/bg-space.jpg')
-  background-position center center
-  background-size cover
-  background-repeat no-repeat
-  .title-section
-    color white
-    margin 0 auto
-    margin-bottom 50px
-    text-align center
-  h3
-    color white
     padding 15px 0
+
+#shoes-top
+  padding 30px 0
+  background-color #eee7de
+  border-top 3px dashed #372611
+  .title-section
+    color #38270f
+    padding 15px 0
+    margin 0 0 25px
+  &:hover, &:focus
+    cursor pointer
 
 .btn-white
   background white
@@ -317,7 +315,7 @@ header
 /************** content area default ****************/
 
 #content-area
-  margin 60px 0px 60px
+  margin 60px 0 60px
   .title-post
     text-align center
     color #555
@@ -546,17 +544,19 @@ header
   border 0 solid transparent
   padding 10px 0
 
-
 .nav-tabs > li > a
   padding 10px 0
   border-radius 0
   font-size 20px
   color #38270f
   margin-left 0
+  border none !important
 
 .nav-tabs
   border-bottom 1px solid #ccc
 
+.see-more
+  padding 25px
 .box-widget
   padding 5px 0
   border 1px solid #f5f5f5
@@ -616,15 +616,53 @@ header
     background-size 180px
     background-repeat no-repeat
     background-position right
-
+.data-contact
+  padding 10px 0
+  a
+    color #352810
+  a > i
+    font-size 14px
+.box-simple
+  margin 25px
+  .box-header
+    .img-box
+      background-size cover
+      height 200px
+      background-repeat no-repeat
+      background-position center center
+      opacity 0.6
+  .box-container
+    background-color transparent
+    padding 10px 0
+    border-bottom-right-radius 3px
+    border-bottom-left-radius 3px
+    text-align center
+    a
+      text-decoration none
+      color #38270f
+    h1
+      color #38270f
+      font-weight 300
+      font-size 22px
+      margin 0
 .box-default
   margin 10px
+  border-left 5px solid transparent
+  border-right 5px solid transparent
+  border-top 5px solid transparent
+  border-bottom-right-radius 3px
+  border-bottom-left-radius 3px
+  -webkit-transition all ease 0.1s
+  -moz-transition all ease 0.1s
+  -ms-transition all ease 0.1s
+  -o-transition all ease 0.1s
+  transition all ease 0.1s
   .img-box
     background-size cover
     height 200px
     background-repeat no-repeat
     background-position center center
-    opacity 0.6
+    opacity 1
   .description
     h4
       color #767676
@@ -651,7 +689,7 @@ header
     .comment, .date
       color #5d5d5d
   .box-header
-    height 250px
+    height 200px
     background-size cover
     background-position center center
   .box-container
@@ -666,7 +704,7 @@ header
       color white
       font-weight 300
       font-size 22px
-      margin 10px 0
+      margin 0
     p
       color #5d5d5d
       text-align justify
@@ -674,10 +712,14 @@ header
       padding 0 10px
   &:hover, &:focus
     background transparent
+    border-left 5px solid #d14094
+    border-right 5px solid #d14094
+    border-top 5px solid #d14094
     .img-box
       opacity 1
     h1,h2,h3
-      color #66161a
+      color #fff
+      background-color #d14094
     p
       color #555
     .comment-area
@@ -795,7 +837,7 @@ header
     padding-bottom 25px
 
 #footer_area
-  background #444444
+  background #352810
   padding 30px 0
   color rgba(255, 255, 255, 0.6)
   line-height 30px
@@ -1176,10 +1218,16 @@ header
   width 100%
   height 100%
   opacity 1
-  background #fff
+  background-image url('../img/bg.jpg')
+  background-size cover
+  background-repeat no-repeat
+  /*background -webkit-linear-gradient(to left, #DE6262 , #FFB88C)
+  background linear-gradient(to left, #DE6262 , #FFB88C)*/
+
 
 .block-ui-message
-  background-color transparent
+  background transparent
+
 .sk-circle
   margin 20px auto
   width 60px
@@ -1197,7 +1245,7 @@ header
       margin 0 auto
       width 20%
       height 20%
-      background-color red
+      background-color white
       border-radius 100%
       -webkit-animation sk-circleBounceDelay 1.2s infinite ease-in-out both
       animation sk-circleBounceDelay 1.2s infinite ease-in-out both
