--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -9,15 +9,15 @@
             <div class="col-md-12 content-pages" infinite-scroll='Post.getMorePosts()'
                      infinite-scroll-disabled='Post.busy || !Post.next || Post.loadPosts'>
                 <div class="container">
-                    <div class="col-md-4" ng-repeat="entry in Post.list">
+                    <div class="col-md-3" ng-repeat="entry in Post.list">
                         <div class="box-default">
                             <a ui-sref="post_detail({slug: entry.slug})">
-                                <div class="box-header center-block"
-                                     style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : initConfig.img_default }}"></div>
+                                <div class="box-header">
+                                    <div class="img-box" style="background-image: url('{{ entry.urlImages.medium ? entry.urlImages.medium : initConfig.img_default }}"></div>
+                                </div>
 
-                                <div class="description">
-                                    <div class="height-title"><h3><a ui-sref="post_detail({slug: entry.slug})" title="{{ entry.title }}">{{ entry.title | characters:50 }} </a></h3></div>
-                                    <div class="height-summary-categories"><h5>{{ entry.excerpt | characters:90 }}</h5></div>
+                                <div class="box-container">
+                                    <h3>{{ category.name|translate }}</h3>
                                 </div>
                             </a>
                         </div>
