--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -1,8 +1,11 @@
 <div class="container">
     <div class="text-center">
-        <a href="mailto:{{ initConfig.email }}"><i class="fa fa-envelope"></i> {{ initConfig.email }}</a>
+        <a href="mailto:info@luissashoes.com"><i class="fa fa-envelope"></i> info@luissashoes.com</a> /
+        <a href="tel:013531062495"><i class="fa fa-phone"></i> 01 353 106 2495</a><br/>
+        <a href="https://www.google.com.mx/maps/place/San+Daniel+Comboni+284,+Centro+Tres,+Sahuayo+de+Morelos,+Mich./@20.0642639,-102.7300404,17z/data=!3m1!4b1!4m5!3m4!1s0x842ee34e7d91b5b1:0x5d3896efd8723777!8m2!3d20.0642589!4d-102.7278464">
+            <i class="fa fa-map-marker"></i> San Daniel comboni #284, 59000 Sahuayo.</a>
     </div>
     <div class="text-center">
-        Copyright © 2016 Novavet Labs
+        Copyright © 2016 Luissa Shoes
     </div>
 </div>
