--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -247,7 +247,7 @@
         </div>
 
         <div class="owl-carousel owl-theme">
-            <div class="box-simple" ng-repeat="product in Home.products" ng-repeat-owl-carousel
+            <div class="box-simple" ng-repeat="product in Home.featureds" ng-repeat-owl-carousel
                  carousel-init="Home.carouselInitializer" ng-if="product">
                 <div class="box-header item">
                     <a ui-sref="product_detail({slug: product.slug})">
