--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 title-post">
-                <h2 class="title">{{ Post.categoryName|translate }}</h2>
+                <h2 class="title">{{ Post.categoryName}}</h2>
             </div>
         </div>
         <div class="row">
@@ -17,7 +17,7 @@
                                 </div>
 
                                 <div class="box-container">
-                                    <h3>{{ category.name|translate }}</h3>
+                                    <h3>{{ category.name }}</h3>
                                 </div>
                             </a>
                         </div>
