--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -17,7 +17,7 @@
                                 </a>
                             </div>
                             <div class="box-container">
-                                <h3>{{ category.name|translate }}</h3>
+                                <h3>{{ category.name }}</h3>
                             </div>
                         </div>
                     </div>
