--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-md-9 col-sm-9">
                 <div class="col-md-12 title">
-                    <h2 class="title-single">{{ 'Noticias'|translate }}</h2>
+                    <h2 class="title-single">Noticias</h2>
                     <hr class="divider"/>
                 </div>
 
@@ -31,11 +31,11 @@
 
                         </div>
                         <div class="col-sm-12" ng-show="Post.busy">
-                            <h3 class="text-center">{{ 'Cargando'|translate }} <i class="fa fa-spinner fa-spin"></i></h3>
+                            <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
                         </div>
                         <div class="col-sm-12" ng-show="!Post.busy">
-                            <h2 class="text-center no-content" ng-show="!Post.list.length">{{ 'no-contenido'|translate }}
-                            </h2>
+                            <h2 class="text-center no-content" ng-show="!Post.list.length">Lo sentimos no contamos con
+                                contenido disponible</h2>
                         </div>
                     </div>
                     <!--post list -->
